--- a/views/welcomePage.ejs
+++ b/views/welcomePage.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> welcome page </title>
-</head>
-<body>
-
-    <h1> WELCOME TO [BLOG SITE NAME] </h1>
-    
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>welcome page</title>
+  </head>
+  <body>
+    <h1>WELCOME TO BRAIN DUMP</h1>
+    <button onclick="location.href= '/homepage' ">Click to enter!</button>
+  </body>
 </html>
