--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,9 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/main.css">
     <title>homepage</title>
   </head>
-  <body>
+  <body id="homepage">
     <h1>Blog Posts</h1>
+
+    <div class="all-cards">
+        <% allPosts.forEach(post => { %>
+            <!-- Create a card for this post -->
+            <div class="card">
+                <a href="/post/<%= post.id%> " class="card-link" >
+
+                    <div class="card-buttons">
+                        <form action="/delete/<%= post.id %>" method="POST">
+                            <button type="submit">X</button>
+                        </form>
+                        <form action="/edit/<%= post.id %>" method="GET">
+                            <button type="submit">EDIT</button>
+                        </form>
+                    </div>
+                        
+                    <div class="card-body">
+                        <h2 class="card-title"> <%= post.title %></h2>
+                        <h3> Written by: <%= post.author %></h3>
+                        <h3> Published: <%= post.date %></h3>
+                    </div>
+
+                </a>
+            </div>
+        <% }) %>
+    </div>
+    
+    <button id="create" onclick="location.href= '/create' ">Create New Post!</button>
+
   </body>
 </html>
